--- a/raccoltoemoraes/package.json
+++ b/raccoltoemoraes/package.json
@@ -7,6 +7,10 @@
     "react-dom": "^16.12.0",
     "react-scripts": "0.9.5"
   },
+  "engines":{
+    "npm":"3.5.2",
+    "node":"v8.10.0"
+  },
   "devDependencies": {},
   "scripts": {
     "start": "react-scripts start",
@@ -14,4 +18,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
+  
 }
