--- a/raccoltoemoraes/package.json
+++ b/raccoltoemoraes/package.json
@@ -5,11 +5,8 @@
   "dependencies": {
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "0.9.5"
-  },
-  "engines":{
-    "npm":"3.5.2",
-    "node":"8.10.0"
   },
   "devDependencies": {},
   "scripts": {
@@ -18,5 +15,4 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
-  
 }
